--- a/assemble_demo/pom.xml
+++ b/assemble_demo/pom.xml
@@ -18,6 +18,8 @@
     <modules>
         <module>rocketMq</module>
         <module>redis</module>
+        <module>es</module>
+        <module>docker</module>
     </modules>
 
     <properties>
