--- a/assemble_demo/docker/src/main/resources/application.yml
+++ b/assemble_demo/docker/src/main/resources/application.yml
@@ -1,3 +1,16 @@
 server:
   port: 8081
 
+dataSourceKey: defaultDS # 源数据源的key, 对应上面配置的srcDataSources中的值
+destination: example  # canal的instance或者MQ的topic
+groupId: g1 # 对应MQ模式下的groupId, 只会同步对应groupId的数据
+esMapping:
+    _index: jqes # es 的索引名称
+    _id: _id  # 将Mysql表里的id对应上es上的_id, 如果不配置该项必须配置下面的pk项_id则会由es自动分配
+    sql: "SELECT
+         p.id AS _id,
+         p.name
+        FROM
+         es p"        # sql映射
+    etlCondition: "where p.id>={}"   #etl的条件参数
+    commitBatch: 1   # 提交批大小
